# boofcvcpp

./: .gitignore  CMakeLists.txt  geo.plantuml  todo.org  uml2cpp.py
src/: Array.hpp  Object.hpp  String.hpp  Vector.hpp
src/boofcv-ip/core/: GImageGray.hpp
src/boofcv-ip/struct/image/: ImageBase.hpp
src/geo/geometry/: UtilLine2D_F64.cpp  UtilLine2D_F64.hpp  UtilLine2D_I32.cpp  UtilLine2D_I32.hpp  UtilPoint2D_F64.cpp  UtilPoint2D_F64.hpp  UtilPoint2D_I32.cpp  UtilPoint2D_I32.hpp  UtilPolygons2D_F64.cpp  UtilPolygons2D_F64.hpp  UtilPolygons2D_I32.cpp  UtilPolygons2D_I32.hpp  UtilVector2D_F64.cpp  UtilVector2D_F64.hpp
src/geo/geometry/algs/: AndrewMonotoneConvexHull_F64.cpp  AndrewMonotoneConvexHull_F64.hpp
src/geo/metric/: Area2D_F64.cpp  Area2D_F64.hpp  ClosestPoint2D_F64.cpp  ClosestPoint2D_F64.hpp  Distance2D_F64.cpp  Distance2D_F64.hpp  Intersection2D_F64.cpp  Intersection2D_F64.hpp  Intersection2D_I32.cpp  Intersection2D_I32.hpp  UtilAngle.hpp
src/geo/misc/: GrlConstants.hpp
src/geo/struct/: GeoTuple.hpp  GeoTuple2D_F64.hpp  GeoTuple_F64.hpp
src/geo/struct/line/: LineGeneral2D_F64.hpp  LineParametric2D_F64.cpp  LineParametric2D_F64.hpp  LineParametric2D_I32.cpp  LineParametric2D_I32.hpp  LinePolar2D_F64.hpp  LineSegment2D_F64.cpp  LineSegment2D_F64.hpp  LineSegment2D_I32.cpp  LineSegment2D_I32.hpp
src/geo/struct/point/: Point2D_F64.cpp  Point2D_F64.hpp  Point2D_I32.cpp  Point2D_I32.hpp  Vector2D_F64.cpp  Vector2D_F64.hpp
src/geo/struct/shapes/: Polygon2D_F64.cpp  Polygon2D_F64.hpp  Polygon2D_I32.cpp  Polygon2D_I32.hpp  (+8 more)
test/: main.cpp
